--- a/index.html
+++ b/index.html
@@ -1,19 +1,254 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta http-equiv="X-UA-Compatible" content="IE=7">
-	<meta name="viewport" content="width=
-	, initial-scale=1.0">
+  <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=7" />
+    <meta
+      name="viewport"
+      content="width=
+	, initial-scale=1.0"
+    />
 
-	<title>Digital Marketing</title>
-	<link rel="shortcut icon" type="image/x-icon" href="laptop.png" />
-	 <!-- Stylesheet -->
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <title>Digital Marketing</title>
+    <link rel="shortcut icon" type="image/x-icon" href="laptop.png" />
+    <!-- bootstrap icons  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.2/font/bootstrap-icons.min.css"
+    />
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- ############ Header Section ############ -->
+    <header class="container-fluid">
+      <nav id="nav" class="flex font-poppins">
+        <div class="nav-brand">
+          <a href="#" class="text-dark text-lg font-bold">Digital</a>
+        </div>
 
- 
-<!-- scripts -->
-<script src="main.js"></script>
-</body>
+        <div class="toggle-btn">
+          <button class="btn">
+            <i class="bi bi-filter-right"></i>
+          </button>
+        </div>
+
+        <div class="collapse flex-grow">
+          <ul class="flex">
+            <li>
+              <a href="#" class="link">Home</a>
+            </li>
+            <li>
+              <a href="#" class="link">About</a>
+            </li>
+            <li>
+              <a href="#" class="link">Services</a>
+            </li>
+
+            <li>
+              <a href="#" class="link">Work</a>
+            </li>
+            <li>
+              <a href="#" class="link">Contact</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="flex-initial">
+          <ul class="flex">
+            <button
+              class="btn btn-primary btn-shadow bg-gradient text-white text-uppercase"
+            >
+              start a project
+            </button>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <!-- ############ /Header Section ############ -->
+
+    <!-- ############  Main Section ############ -->
+
+    <main id="site-main">
+      <!-- banner area -->
+      <section class="banner-area font-poppins">
+        <div class="container mx-auto banner-title">
+          <div class="title">
+            <span class="d-inline btn btn-primary bg-gradient-peach text-red">
+              digital experience
+            </span>
+            <div class="py-2 branding text-dark text-lg sm-text-xl font-bold">
+              <span class="d-block">Branding, Digital</span>
+              <span class="d-block">Marketing and</span>
+              <span class="d-block">business solutions</span>
+            </div>
+            <div class="py-5">
+              <p class="text-gray">
+                We merge imagination and texhnology to help thousands of
+              </p>
+              <p class="text-gray">
+                brands grow in an age of digital transforamtion
+              </p>
+            </div>
+
+            <div class="py-5">
+              <a
+                href="#"
+                class="btn btn-primary bg-gradient text-white btn-shadow"
+                >Work Together</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /banner area -->
+      <!-- agency area -->
+      <section class="agency-area">
+        <div class="container mx-auto text-center font-poppins">
+          <span class="text-red">Join our Agency</span>
+          <div class="area-title">
+            <h1 class="text-lg text-dark">
+              We design and build beautiful digital <br />
+              products that make a difference
+            </h1>
+          </div>
+
+          <div class="grid cols-1 lg-cols-3 py-10">
+            <div class="grid-item px-5">
+              <div class="text-center text-2xl text-red">
+                <i class="bi bi-bricks"></i>
+              </div>
+              <div class="text-center">
+                <h4 class="text-md py-2">Grow Your Business</h4>
+                <p class="text-gray">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
+                  obcaecati at aliquid harum iusto voluptates.
+                </p>
+              </div>
+            </div>
+            <div class="grid-item px-5">
+              <div class="text-center text-2xl text-red">
+                <i class="bi bi-megaphone"></i>
+              </div>
+              <div class="text-center">
+                <h4 class="text-md py-2">Digital Marketing</h4>
+                <p class="text-gray">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
+                  obcaecati at aliquid harum iusto voluptates.
+                </p>
+              </div>
+            </div>
+            <div class="grid-item px-5">
+              <div class="text-center text-2xl text-red">
+                <i class="bi bi-mouse"></i>
+              </div>
+              <div class="text-center">
+                <h4 class="text-md py-2">Search Enging Optimization</h4>
+                <p class="text-gray">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
+                  obcaecati at aliquid harum iusto voluptates.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /agency area -->
+      <!-- digital life area -->
+      <section class="container mx-auto life-area">
+        <div class="grid cols-1 lg-cols-2 text-center md-text-left">
+          <div class="grid-images">
+            <div class="item-one"></div>
+            <div class="item-two"></div>
+            <div class="item-three"></div>
+          </div>
+          <div class="py-10">
+            <span class="d-inline btn btn-primary bg-gradient-peach text-red"
+              >digital experience
+            </span>
+            <div class="font-poppins">
+              <h1 class="text-lg text-dark py-5">
+                Connect people in <br />
+                digital life
+              </h1>
+              <p class="py-5 text-gray">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Eligendi temporibus tempora aspernatur atque delectus eum.
+              </p>
+              <p class="text-gray py-5">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime
+                illo expedita, culpa aliquam natus tempora magni veniam
+                voluptatum nemo sunt commodi neque velit iure odit. Harum, fuga
+                ea. Deleniti nulla magni excepturi quaerat, repudiandae commodi
+                magnam itaque quis vero suscipit modi possimus ipsam, omnis ut?
+                Tempora, corporis. Fugiat, asperiores saepe?
+              </p>
+
+              <div class="py-5">
+                <a
+                  href="#"
+                  class="btn btn-primary bg-gradient btn-shadow text-white"
+                >
+                  More about us
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /digital life area -->
+      <!-- counting area -->
+      <section class="container mx-auto counting-area">
+        <div class="grid cols-1 lg-cols-2">
+          <div class="grid-one text-center md-text-left">
+            <span class="d-inline btn btn-primary bg-gradient-peach text-red">
+              digital experience
+            </span>
+            <div class="text-poppins">
+              <h1 class="text-lg text-dark py-5">
+                The hundred of <br />
+                completed works <br />
+                still counting
+              </h1>
+              <p class="text-gray mx-auto md-mx-initial">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Doloremque eius, placeat et, earum molestias expedita sit sequi
+                hic ut eaque totam minima cupiditate inventore maiores fugit
+                voluptatem, enim cum molestiae necessitatibus perferendis
+                voluptate natus. Velit voluptates nisi commodi error cum.
+              </p>
+            </div>
+          </div>
+
+          <div class="grid-two">
+            <div class="count-box">
+              <div class="grid lg-cols-2 btn-shadow font-poppins">
+                <div class="item1 text-center">
+                  <h1 class="text-dark text-xl">21+</h1>
+                  <span class="text-gray">Total Top Services</span>
+                </div>
+                <div class="item2 text-center">
+                  <h1 class="text-dark text-xl">29+</h1>
+                  <span class="text-gray">Countries</span>
+                </div>
+                <div class="item3 text-center">
+                  <h1 class="text-dark text-xl">21%</h1>
+                  <span class="text-gray">Positive Feedback</span>
+                </div>
+                <div class="item4 text-center">
+                  <h1 class="text-dark text-xl">3.798</h1>
+                  <span class="text-gray">Usual Users</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- counting area -->
+    </main>
+
+    <!-- ############ /Main Section ############ -->
+
+    <!-- scripts -->
+    <script src="main.js"></script>
+  </body>
 </html>
