fix extra small responsive

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- Banner area -->
     <section class="banner-area font-poppins">
       <div class="container mx-auto banner-title">
-        <div class="title">
+        <div class="title background-light">
           <span class="d-inline btn btn-primary bg-gradient-peach text-red animate__animated animate__fadeInUp">
             digital experience
           </span>
@@ -478,16 +478,16 @@
 
     <!-- Ready area -->
     <section class="ready-area container mx-auto py-5 animate__animated animate__zoomIn">
-      <div class="flex flex-wrap font-poppins btn-shadow py-10 sm-px-10">
+      <div class="flex flex-wrap font-poppins btn-shadow py-10 sm-px-10 xs-flex">
         <div class=" w-50">
           <h1 class="text-lg sm-text- text-dark">Ready to get Started</h1>
-          <p class="text-gray">
+          <p class="text-gray  py-2">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste accusamus at praesentium rem consequatur eos
             in rerum nulla quis tenetur veniam temporibus commodi soluta
           </p>
 
         </div>
-        <div class="cols  py-5">
+        <div class="cols py-5">
           <a href="#" class="btn-shadow text-white btn btn-primary   text-center bg-gradient">
             <span class="text-uppercase">Get Started</span>
           </a>
